dev/tests/cases/neg/21_negate_u128.tv
df main() -> void {
    set u: u128 = 5;
    echo!(-u);
}
